添加点击开始，柱子移动等

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="game">
         <div class="bird"></div>
         <div class="start start-blue">开始游戏</div>
-        <div class="score">100000000</div>
+        <div class="score">0</div>
         <div class="mask"></div> 
         <div class="end">
             <div class="over">Game over</div>
@@ -43,5 +43,6 @@
         </div>
     </div>
     <script src="./index.js"></script> 
+    <script src="./utils.js"></script>
 </body>
 </html>
