--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="result">Your Result:</div>
             <div class="final-score">0</div>
             <ul class="rank-list">
-                <li class="rank-item">
+                <!-- <li class="rank-item">
                     <span class="rank-degree first">1</span>
                     <span class="rank-score">5</span>
                     <span class="rank-time">2020.08.15 20:20:20</span>
@@ -37,12 +37,13 @@
                     <span class="rank-degree forth">1</span>
                     <span class="rank-score">5</span>
                     <span class="rank-time">2020.08.15 20:20:20</span>
-                </li>
+                </li> -->
             </ul>
             <div class="restart">重新开始</div>
         </div>
     </div>
-    <script src="./index.js"></script> 
     <script src="./utils.js"></script>
+    
+    <script src="./index.js"></script> 
 </body>
 </html>
